Fix vertical alignment for the footer

--- a/sites/all/themes/nrb_televie/css/default.css
+++ b/sites/all/themes/nrb_televie/css/default.css
@@ -5864,7 +5864,7 @@ span.header-view {font-size: 3em; margin-bottom: 30px; font-family: proxima-excn
   display: block;
   color: white;
   text-decoration: none;
-  line-height: 72px;
+  line-height: 76px;
   width: 101px;
   height: 81px;
   font-size: 1.2em;
